adding flavors for theme 04

--- a/sites/all/themes/scholar_theme_04/scholar-theme-04.css
+++ b/sites/all/themes/scholar_theme_04/scholar-theme-04.css
@@ -180,7 +180,7 @@ body.sidebar-left #footer, body.two-sidebars #footer {
 
 /* Nodes */
 
-#content-main .node, body.section-node-edit #content, body.section-node-add #content, #comments {
+#content-main .node, body.section-node-edit #content, body.section-node-add #content, #comments, .biblio-entry {
     padding: 10px;
     background: #fff;
     margin-bottom: 10px;
