adding flavors theme 07

--- a/sites/all/themes/scholar_theme_07/scholar-theme-07.css
+++ b/sites/all/themes/scholar_theme_07/scholar-theme-07.css
@@ -48,8 +48,6 @@ a:hover {
     }
 
 
-
-
 h1, h2, h3, #sidebar-right a, #navbar, #header {
     font-weight: normal;
     }
@@ -84,6 +82,7 @@ h2.title {
 
 #header-right {
   right: auto;
+  width:70px;
   }
 
 #content-wrapper {
@@ -93,7 +92,7 @@ h2.title {
   }
 
 #header-wrapper {
-  padding-right: 100px;
+  padding-right: 70px;
   padding-left: 100px;
   }
 
@@ -183,5 +182,3 @@ h2.title {
     color:#fff;
     background: #b8690c;
     }
-
-
