adding theme 09 plus fixes to theme 02 flavors

--- a/sites/all/themes/scholar_theme_02/scholar-theme-02-a.css
+++ b/sites/all/themes/scholar_theme_02/scholar-theme-02-a.css
@@ -1,7 +1,7 @@
 /*Blue version*/
 
 body {
-  background-image: url(images/body.bg-blue.png);
+  background-image: url(images/body-bg-blue.png);
   }
 
 a, a:visited {
