--- a/sites/all/themes/scholar_theme_02/scholar-theme-02-b.css
+++ b/sites/all/themes/scholar_theme_02/scholar-theme-02-b.css
@@ -1,7 +1,7 @@
 /*Olive version*/
 
 body {
-  background-image: url(images/body.bg-olive.png);
+  background-image: url(images/body-bg-olive.png);
   }
 
 a, a:visited {
