--- a/sites/all/themes/scholar_theme_02/scholar-theme-02-d.css
+++ b/sites/all/themes/scholar_theme_02/scholar-theme-02-d.css
@@ -1,7 +1,7 @@
 /*Orange Brown version*/
 
 body {
-  background-image: url(images/body.bg-brown.png);
+  background-image: url(images/body-bg-brown.png);
   }
 
 a, a:visited {
