--- a/sites/all/themes/scholar_theme_02/scholar-theme-02-e.css
+++ b/sites/all/themes/scholar_theme_02/scholar-theme-02-e.css
@@ -1,7 +1,7 @@
 /*Opal version*/
 
 body {
-  background-image: url(images/body.bg-opal.png);
+  background-image: url(images/body-bg-opal.png);
   }
 
 a, a:visited {
