--- a/sites/all/themes/scholar_theme_02/scholar-theme-02-f.css
+++ b/sites/all/themes/scholar_theme_02/scholar-theme-02-f.css
@@ -1,7 +1,7 @@
 /*Grey version*/
 
 body {
-  background-image: url(images/body.bg-grey.png);
+  background-image: url(images/body-bg-grey.png);
   }
 
 a, a:visited {
