--- a/sites/all/themes/scholar_theme_02/scholar-theme-02-c.css
+++ b/sites/all/themes/scholar_theme_02/scholar-theme-02-c.css
@@ -1,7 +1,7 @@
 /*Black version*/
 
 body {
-  background-image: url(images/body.bg-black.png);
+  background-image: url(images/body-bg-black.png);
   }
 
 a, a:visited {
