fix up the themes

--- a/sites/all/modules/vsite/vsite_design/theme/vsite_design_theme_picker.css
+++ b/sites/all/modules/vsite/vsite_design/theme/vsite_design_theme_picker.css
@@ -90,9 +90,9 @@ ul.theme-picker li.checked h3 {
   color: #fff;
   }
 
-form#cp-settings-form fieldset {
+form#cp-settings-form div.form-radios {
   display:none;
-  }
+}
 
 #cp-settings-form  {
   clear: both;
