add better welcome message

--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -519,6 +519,10 @@ div.error {
   margin-top: 1em;
   text-align:right;
   }
+  
+#message_welcome_message div#welcome_wrapper.slider {
+  display:none;
+  }
 
 #message_welcome_message .scholar-admin .toggle span,#message_welcome_message .scholar-admin .slider {
   background: #D1D5A6;
