--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -494,16 +494,14 @@ div.error {
 
 /* Welcome message */
 
-#message_welcome_message {
-  background:#fff;
-  border:1px solid #d1d5a6;
-  color:#44471d;
-  margin:0 0 10px;
-  padding:9px 20px;
+#message_welcome_message .toggle {
+  color: #13539F;
+  cursor: pointer;
+  font-weight: bold;
   }
 
 #message_welcome_message h3, #message_welcome_message p {
-  margin-bottom: 1em;
+  margin: 1em 0;
   }
 
 #resource-list li {
@@ -519,14 +517,13 @@ div.error {
   margin-top: 1em;
   text-align:right;
   }
-  
+
 #message_welcome_message div#welcome_wrapper.slider {
   display:none;
   }
 
 #message_welcome_message .scholar-admin .toggle span,#message_welcome_message .scholar-admin .slider {
-  background: #D1D5A6;
-  border-color: #9ea17b;
+
   }
 
 #message_welcome_message .scholar-admin .slider ul.links li.first {
