initial flavor theming for theme 08

--- a/sites/all/themes/scholar_theme_08/scholar-theme-08-ie.css
+++ b/sites/all/themes/scholar_theme_08/scholar-theme-08-ie.css
@@ -1,59 +1,33 @@
-html {
-    overflow-y: hidden;
-    }
+#header, #sidebar-right {
+  background:#3f5a6d;
+  }
 
-body {
-   height: 100%;
-   overflow: auto;
-   }
-
-#header, #sidebar-left, #sidebar-right, #footer {
+#footer {
   background:transparent;
-  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#c203263f,endColorstr=#c203263f);
+  filter:progid:DXImageTransform.Microsoft.Gradient(startColorstr=#c203263f,endColorstr=#c203263f);
   zoom: 1;
   }
 
 #sidebar-left {
-  left: 202px !important;
-  background:transparent;
-  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#c2d2dab8,endColorstr=#c2d2dab8);
-  zoom: 1;
+  background:#dde3c9;
+  }
+
+#block-vsite_menus-0 ul.menu li.active-trail {
+  background:#476172;
   }
 
 #extradiv {
   background:transparent;
-  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#7fd2dab8,endColorstr=#7fd2dab8);
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#0d03263f,endColorstr=#0d03263f);
   zoom: 1;
   }
 
-
-#header-left {
-  left: auto !important;
+.node-teaser {
+  background:transparent;
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#08d2dab8,endColorstr=#08d2dab8);
+  zoom: 1;
   }
 
 #block-vsite_menus-0 ul.menu li a:hover {
   background: #ECEFE0;
-  }
-
-#footer {
-  _position: absolute;
-  }
-
-#header, #sidebar-left, #sidebar-right, #content-main {
-  _height:expression(document.body.clientHeight-0); »
-  }
-
-#footer {
-   _width:expression(document.body.clientWidth-0); »
-  }
-
-body.two-sidebars #content-main {
-  _width:expression(document.body.clientWidth-596); »
-/* 366+170+30+30=260 */
-  }
-
-
-body.sidebar-left #content-main {
-  _width:expression(document.body.clientWidth-426); »
-/* 366+30+30=260 */
   }
