more theming for welcome message

--- a/sites/all/modules/scholar/scholar/theme/scholar-admin-links.css
+++ b/sites/all/modules/scholar/scholar/theme/scholar-admin-links.css
@@ -32,6 +32,40 @@
   padding: 2px 4px;
   }
 
+
+/* WELCOME MESSAGE SPECIFIC */
+
+#message_welcome_message .scholar-admin {
+  margin-top: 1em;
+  text-align:right;
+  position: relative;
+  }
+
+#message_welcome_message div#welcome_wrapper.slider {
+  display:none;
+  }
+
+#message_welcome_message .scholar-admin .slider {
+  position: absolute;
+  top: 18px;
+  right: -5px;
+  background: transparent;
+  border: none;
+  padding: 0;
+  }
+
+#message_welcome_message .scholar-admin .slider ul.links li a {
+  font-weight: bold;
+  }
+
+#message_welcome_message .scholar-admin .slider ul.links li.first {
+  padding-right: 5px;
+  border-right: 1px solid #222;
+  margin-right: 5px;
+  }
+
+
+
 .scholar-admin ul.links li a:hover {
   background: transparent;
   text-decoration: underline;
