--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -504,33 +504,16 @@ div.error {
   margin: 1em 0;
   }
 
+#welcome_wrapper {
+  border-bottom: 1px solid #ccc;
+  padding-bottom: 1em;
+  }
+
 #resource-list li {
   padding-left: 20px;
   list-style: disc inside;
   }
 
-#hide-box-options {
-  margin-bottom: 0;
-  }
-
-#message_welcome_message .scholar-admin {
-  margin-top: 1em;
-  text-align:right;
-  }
-
-#message_welcome_message div#welcome_wrapper.slider {
-  display:none;
-  }
-
-#message_welcome_message .scholar-admin .toggle span,#message_welcome_message .scholar-admin .slider {
-
-  }
-
-#message_welcome_message .scholar-admin .slider ul.links li.first {
-  padding-right: 5px;
-  border-right: 1px solid #222;
-  margin-right: 5px;
-  }
 
 /* SYSTEM THINGS */
 
