adding flavors to theme 06

--- a/sites/all/themes/scholar_theme_06/scholar-theme-06-ie.css
+++ b/sites/all/themes/scholar_theme_06/scholar-theme-06-ie.css
@@ -9,3 +9,12 @@ body.header-left-main-right #header-left {
 body.header-left-main #header-left {
   left: 0px;
   }
+
+#container, #header, #footer {
+  behavior: expression((this.runtimeStyle.behavior="none")&&(this.pngSet?this.pngSet=true:(this.nodeName == "IMG" && this.src.toLowerCase().indexOf('.png')>-1?(this.runtimeStyle.backgroundImage = "none",
+  this.runtimeStyle.filter = "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='" + this.src + "', sizingMethod='image')",
+  this.src = "/sites/all/themes/scholar_base/images/transparent.gif"):(this.origBg = this.origBg? this.origBg :this.currentStyle.backgroundImage.toString().replace('url("','').replace('")',''),
+  this.runtimeStyle.filter = "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='" + this.origBg + "', sizingMethod='crop')",
+  this.runtimeStyle.backgroundImage = "none")),this.pngSet=true)
+  );
+  }
