--- a/sites/all/themes/scholar_theme_06/scholar-theme-06.css
+++ b/sites/all/themes/scholar_theme_06/scholar-theme-06.css
@@ -3,7 +3,7 @@ html {
     }
 
 body {
-    background: #44514f;
+    background-color: #44514f;
     color:#2F2F2F;
     font:.9em/165% "Lucida Grande","Lucida Sans Unicode",Arial,Verdana,sans-serif;
     }
@@ -15,7 +15,7 @@ body {
 #container {
     width: 840px;
     margin: 0 auto;
-    background:url(images/bg.gif) top center repeat-y #f6f3ea;
+    background:url(images/bg.png) top center repeat-y #434f4d;
     }
 
 a, a:visited {
@@ -115,7 +115,7 @@ body.no-sidebars #content-wrapper {
 /* HEADER ELEMENTS */
 
 #header {
-    background: #44514F url(images/top.gif) no-repeat 50% 100%;
+    background: #44514F url(images/top.png) no-repeat 50% 100%;
     color: #F7F3EA;
     padding-bottom: 40px;
     }
@@ -174,10 +174,6 @@ body.no-sidebars #content-wrapper {
 
 /* MAIN CONTENT AREA */
 
-#content-wrapper {
-  background: url(images/bg.gif) repeat-y 50% 0;
-  }
-
 body.sidebar-left #content {
     margin-left: 30px;
     }
@@ -194,7 +190,7 @@ body.two-sidebars #content {
 /* Footer*/
 #footer {
   text-align: center;
-  background: url(images/bot.gif) no-repeat 50% 0 #44514F;
+  background: url(images/bottom.png) no-repeat 50% 0 #44514F;
   padding-top: 30px;
   padding-bottom: 30px;
   }
