advanced help button fix

--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -451,6 +451,8 @@ input.form-submit, button {
  width: 15px;
  height: 15px;
  margin-right: 4px;
+ display:block;
+ text-indent: -999em;
  }
 
 .advanced-help-link:hover {
