--- a/sites/all/themes/custom/rbates/rbates.css
+++ b/sites/all/themes/custom/rbates/rbates.css
@@ -1,8 +1,185 @@
+body {
+    background: url(images/fabric-strip.jpg) repeat-y 50% 0 #4C2F0D;
+    color:#282828;
+    font:.9em/165% "Lucida Grande","Lucida Sans Unicode",Arial,Verdana,sans-serif;
+    }
+
+
+/* Safari begins background image at an odd place */
+@media screen and (-webkit-min-device-pixel-ratio:0){
+  body {background-position: 50% 20px }
+  }
+
+body.cp-toolbar-full {
+  background-position: 50% 42px;
+  }
+
+#wrapper {
+    width: 100%;
+    background: url(images/menu-strip.png) repeat-x 0 100px transparent;
+    }
+
+#container {
+    width: 676px;
+    background: url(images/header.jpg) no-repeat 50% 0 transparent;
+    margin: 0 auto;
+    padding-left: 193px;
+    padding-right: 54px;
+    }
+
+a, a:visited {
+    color:#353535;
+    text-decoration: underline;
+    }
+
+a:hover {
+    color:#3399CC;
+    }
+
+
+h1, h2, h3, #sidebar-right a, #navbar, #header {
+    font-weight: normal;
+    }
+
+
+h1 a, h2 a, h3 a, #sidebar-right a {
+    font-style: bold;
+    }
+
+h2, h3, h4 {
+  margin-bottom: 0;
+  margin-top: 1em;
+  }
+
+h2.title {
+  margin-bottom: 1em;
+  }
+
+
+/* LAYOUT ELEMENTS */
+
+#sidebar-left {
+   width: 168px;
+   right: 198px;
+    }
+
+#header-left, #header-right {
+  width: 100px;
+  right: 120px;
+  padding: 0;
+  }
+
+#header-right {
+  right: auto;
+  width:70px;
+  }
+
+#content-wrapper {
+  padding-left: 188px;
+  padding-right: 220px;
+  padding-top: 30px;
+  }
+
+#header-wrapper {
+  padding-right: 70px;
+  padding-left: 100px;
+  }
+
+#sidebar-right {
+    border-left: 1px solid #ccc;
+    }
+
+#footer {
+    text-align: center;
+    width: auto;
+    }
+
+
+/* HEADER ELEMENTS */
+
+
+#header {
+    height: 141px;
+    font-family: georgia, serif;
+    }
+
+#header .column {
+  padding-top: 10px;
+  }
+
+#header-wrapper, #content-wrapper, #navbar, #footer {
+ }
+
+#header-wrapper {
+  height: 114px;
+  }
+
+
+#header h1 {
+    font-size: 2.5em;
+    line-height: 1em;
+    }
+
+#header, #header h1, #header h2, #header h3, #header a, #header a:visited, #header h1 a, #header h1 a:visited {
+    color:#fff;
+    }
+
+#header a, #header a:visited {
+    text-decoration: none;
+    border-bottom: 1px solid #c16e04;
+    }
+
+#header h1 a, #header h1 a:visited, #header #logo a, #header #logo a:visited {
+    text-decoration: none;
+    border: none;
+    }
+
+#header h2 {
+    font-size: 1.1em;
+    line-height: 1em;
+    }
+
+#header p {
+    margin-bottom: 0;
+    }
+
+#logo img {
+  width: 80px;
+  }
+
+#navbar {
+    height: 32px;
+    }
+
+
+#navbar li {
+    font-size: 1.1em;
+    line-height: normal;
+    font-family:"Lucida Grande","Lucida Sans Unicode",Arial,Verdana,sans-serif;
+    float:left;
+    }
+
+#navbar li a, #navbar li a:visited {
+    color: #523507;
+    border: none;
+    display: block;
+    padding: 3px 7px 7px 7px;
+    font-weight: bold;
+    }
+
+#navbar li a:hover, #navbar li a.active, #navbar .active-trail a {
+    color:#fff;
+    background: #b8690c;
+    }
+
+
+/*FRONT PAGE */
+
 body.page-home {
   background: #4E320A;
   }
 
-body.page-home #container, body.page-home  #content-wrapper-bottom, body.page-home #header {
+body.page-home #container, body.page-home #content-wrapper-bottom, body.page-home #header {
   background: transparent;
   padding: 0;
   }
@@ -119,8 +296,4 @@ body.page-home #container, body.page-home  #content-wrapper-bottom, body.page-ho
 #map li a {
 	left: auto !important;
 	top: auto !important;
-	}
-
-
-#map li#africa_research a {
 	}
