changed css classes to vsite-admin

--- a/sites/all/modules/vsite/vsite/theme/vsite-admin-links.css
+++ b/sites/all/modules/vsite/vsite/theme/vsite-admin-links.css
@@ -1,8 +1,8 @@
-.scholar-admin .slider {
+.vsite-admin .slider {
   display:none;
   }
 
-.scholar-admin .slider, .scholar-admin .toggle span {
+.vsite-admin .slider, .vsite-admin .toggle span {
   background:#eef3fb;
   border: 1px solid #dde2eb;
   color: #444;
@@ -10,11 +10,11 @@
   font: 12px/120% arial, sans-serif;
   }
 
-.scholar-admin .toggle {
+.vsite-admin .toggle {
   display:inline;
   }
 
-.scholar-admin .toggle span {
+.vsite-admin .toggle span {
   -moz-border-radius: 15px;
   -webkit-border-radius: 15px;
   margin: 0;
@@ -22,11 +22,11 @@
   cursor: pointer;
   }
 
-.scholar-admin .slider {
+.vsite-admin .slider {
   margin-top: 6px;
   }
 
-.scholar-admin ul.links li a, .scholar-admin .scholar-admin ul.links li a:visited {
+.vsite-admin ul.links li a, .vsite-admin .vsite-admin ul.links li a:visited {
   color: #005C9C;
   background: transparent;
   padding: 2px 4px;
@@ -35,7 +35,7 @@
 
 /* WELCOME MESSAGE SPECIFIC */
 
-#message_welcome_message .scholar-admin {
+#message_welcome_message .vsite-admin {
   margin-top: 1em;
   text-align:right;
   position: relative;
@@ -45,7 +45,7 @@
   display:none;
   }
 
-#message_welcome_message .scholar-admin .slider {
+#message_welcome_message .vsite-admin .slider {
   position: absolute;
   top: 18px;
   right: -5px;
@@ -54,11 +54,11 @@
   padding: 0;
   }
 
-#message_welcome_message .scholar-admin .slider ul.links li a {
+#message_welcome_message .vsite-admin .slider ul.links li a {
   font-weight: bold;
   }
 
-#message_welcome_message .scholar-admin .slider ul.links li.first {
+#message_welcome_message .vsite-admin .slider ul.links li.first {
   padding-right: 5px;
   border-right: 1px solid #222;
   margin-right: 5px;
@@ -66,16 +66,16 @@
 
 
 
-.scholar-admin ul.links li a:hover {
+.vsite-admin ul.links li a:hover {
   background: transparent;
   text-decoration: underline;
   }
 
-.scholar-admin li.cite_distribute {
+.vsite-admin li.cite_distribute {
   position: relative;
   }
 
-.scholar-admin li.cite_distribute .distribute-form-wrapper {
+.vsite-admin li.cite_distribute .distribute-form-wrapper {
   position: absolute;
   top: 12px;
   left: 0;
@@ -85,22 +85,22 @@
   width: 400px;
   }
 
-.scholar-admin li.cite_distribute .distribute-form-wrapper fieldset {
+.vsite-admin li.cite_distribute .distribute-form-wrapper fieldset {
   border: none;
   background: transparent;
   width: 100%;
   }
 
-.scholar-admin li.cite_distribute .distribute-form-wrapper fieldset legend {
+.vsite-admin li.cite_distribute .distribute-form-wrapper fieldset legend {
   color: #888;
   }
 
-.scholar-admin li.cite_distribute .repository-item {
+.vsite-admin li.cite_distribute .repository-item {
   display: inline;
   margin-right: 15px;
   }
 
-.scholar-admin li.cite_distribute .repository-item .form-item {
+.vsite-admin li.cite_distribute .repository-item .form-item {
   display:inline;
   }
 
