adding improved ie css

--- a/sites/all/themes/scholar_theme_08/scholar-theme-08-3-ie.css
+++ b/sites/all/themes/scholar_theme_08/scholar-theme-08-3-ie.css
@@ -1,25 +1,25 @@
 #header, #sidebar-right, #footer {
 
-  background:#03263f;
+  background:#414141;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=76)";
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=76);
   zoom: 1;
   }
 
 #sidebar-left {
-  background: #d2dab8;
+  background: #e2e2e2;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=76)";
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=76);
   zoom: 1;
   }
 
 #block-vsite_menus-0 ul.menu li a:hover {
-  background: #dde5c1;
+  background: #f8fad1;
   }
 
 
 #block-vsite_menus-0 ul.menu li.active-trail {
-  background-color: #03263f;
+  background-color: #414141;
   }
 
 #extradiv {
@@ -30,8 +30,8 @@
     }
 
 .node-teaser {
-  background-color: #d2dab8;
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=30)";
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=30);
+  background-color: #e9e9e9;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=61)";
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=61);
   zoom: 1;
   }
