--- a/sites/all/themes/scholar_theme_08/scholar-theme-08.css
+++ b/sites/all/themes/scholar_theme_08/scholar-theme-08.css
@@ -79,7 +79,7 @@ body.navbar-on #wrapper {
   left: auto;
   }
 
-#header, #sidebar-left, #sidebar-right, #footer {
+#header, #sidebar-right, #footer {
   background: rgba(3, 38, 63, 0.76);
   }
 
@@ -196,7 +196,7 @@ body.sidebar-left p.copy, body.two-sidebars p.copy {
   }
 
 #block-vsite_menus-0 ul.menu li a.active, #block-vsite_menus-0 ul.menu li.active-trail a, #block-vsite_menus-0 ul.menu li a.active:hover, #block-vsite_menus-0 ul.menu li.active-trail a:hover {
-  background-image: url(images/menu-selected.png);
+  background: url(images/menu-selected.png);
   background-repeat: no-repeat;
   background-position: 100% 0;
   background-color: transparent;
