--- a/sites/all/themes/scholar_theme_08/scholar-theme-08-1-ie.css
+++ b/sites/all/themes/scholar_theme_08/scholar-theme-08-1-ie.css
@@ -1,36 +1,36 @@
 #header, #sidebar-right, #footer {
 
-  background:#03263f;
+  background:#3f1717;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=76)";
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=76);
   zoom: 1;
   }
 
 #sidebar-left {
-  background: #d2dab8;
+  background: #dddfae;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=76)";
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=76);
   zoom: 1;
   }
 
 #block-vsite_menus-0 ul.menu li a:hover {
-  background: #dde5c1;
+  background: #ECEFE0;
   }
 
 
 #block-vsite_menus-0 ul.menu li.active-trail {
-  background-color: #03263f;
+  background-color: #476172;
   }
 
 #extradiv {
-  background-color: #03263f;
+  background-color: #3f1717;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=50);
   zoom: 1;
     }
 
 .node-teaser {
-  background-color: #d2dab8;
+  background-color: #f8fbd1;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=30)";
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=30);
   zoom: 1;
