--- a/sites/all/themes/scholar_theme_08/scholar-theme-08-2-ie.css
+++ b/sites/all/themes/scholar_theme_08/scholar-theme-08-2-ie.css
@@ -1,25 +1,25 @@
 #header, #sidebar-right, #footer {
 
-  background:#03263f;
+  background:#3f3c0e;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=76)";
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=76);
   zoom: 1;
   }
 
 #sidebar-left {
-  background: #d2dab8;
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=76)";
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=76);
+  background: #dddfae;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=50);
   zoom: 1;
   }
 
 #block-vsite_menus-0 ul.menu li a:hover {
-  background: #dde5c1;
+  background: #f8fad1;
   }
 
 
 #block-vsite_menus-0 ul.menu li.active-trail {
-  background-color: #03263f;
+  background-color: #3f3c0e;
   }
 
 #extradiv {
@@ -30,8 +30,8 @@
     }
 
 .node-teaser {
-  background-color: #d2dab8;
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=30)";
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=30);
+  background-color: #f8fad1;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=61)";
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=61);
   zoom: 1;
   }
