--- a/sites/all/modules/contrib/diff/diff.css
+++ b/sites/all/modules/contrib/diff/diff.css
@@ -1,41 +1,5 @@
-/* $Id: diff.css,v 1.7.4.1 2009/04/15 15:05:42 yhahn Exp $ */
+/* $Id: diff.css,v 1.7 2008/01/30 18:34:13 weitzman Exp $ */
 
-/**
- * Inline form theming
- */
-div.diff-inline-form {
-  margin:10px 0px;
-  background:#f4f4f4;
-  padding:5px;
-  }
-
-div.diff-inline-form div.form-item {
-  float:left;
-  margin:0px 10px 0px 0px;
-  }
-
-div.diff-inline-form div.form-item * {
-  vertical-align:middle;
-  }
-
-div.diff-inline-form div.toggle {
-  float:right;
-  }
-
-/**
- * Inline diff markup
- */
-span.diff-deleted {
-  color:#ccc;
-  }
-
-span.diff-changed {
-  background:#ffb;
-  }
-
-/**
- * Traditional split diff theming
- */
 table.diff {
   border-spacing: 4px;
   margin-bottom: 20px;
