login link color

--- a/sites/all/themes/scholar_theme_06/scholar-theme-06.css
+++ b/sites/all/themes/scholar_theme_06/scholar-theme-06.css
@@ -204,3 +204,12 @@ body.two-sidebars #content {
     color: #fff;
     border-color:#CFCFCF;
     }
+
+#footer #footer-login {
+  color: #333;
+  }
+
+#footer #footer-login:hover {
+    color: #333;
+    border-color:#CFCFCF;
+    }
