fixed nav bar and page padding

--- a/sites/all/themes/scholar_theme_09/scholar-theme-09.css
+++ b/sites/all/themes/scholar_theme_09/scholar-theme-09.css
@@ -6,7 +6,7 @@ html {
 body {
     background: url(images/body-bg.jpg) repeat-y center top #fff;
     color:#282828;
-    font:.9em/165% arial, helvetica, sans-serif;
+    font:.9em/155% arial, helvetica, sans-serif;
     }
 
 body.cp-toolbar-full {
@@ -68,11 +68,15 @@ h2.title {
 
 /* LAYOUT ELEMENTS */
 
+#sidebar-left, #sidebar-right {
+  font-size: .8em;
+  line-height: 1.1em;
+  }
+
 #sidebar-left {
     width: 95px;
     right: 135px;
-    font-size: .9em;
-    }
+     }
 
 #sidebar-left ul.menu {
   text-align: right;
@@ -100,13 +104,14 @@ h2.title {
 
 
 #header {
-  margin: 113px 178px 0 173px;
+  margin: 113px 198px 0 175px;
   padding-bottom: 15px;
   overflow:hidden;
   }
 
 #navbar {
   width: auto;
+  margin: 10px;
   }
 
 #header-left {
@@ -151,11 +156,14 @@ h2.title {
   height: 100px;
   }
 
+#scholar-shield img {
+  height: 52px;
+  }
 
 /* MAIN CONTENT AREA */
 
 #content {
-    padding: 0 30px;
+    padding: 0 50px;
     }
 
 
