table of images was blowing up some themes

--- a/sites/all/modules/features/scholar_image_gallery/scholar_image_gallery.css
+++ b/sites/all/modules/features/scholar_image_gallery/scholar_image_gallery.css
@@ -1,8 +1,6 @@
 /* $Id: views_gallery.css,v 1.5 2009/08/18 14:45:17 karens Exp $ */
 
 
-
-
 .view-scholar-image-gallery p {
   margin-bottom: 0;
   }
@@ -29,12 +27,18 @@ div.views-field-field-gallery-image-fid img:hover {
   }
 
 
-// Force the table grid to equal column
-// widths no matter what is in them.
+/* Force the table grid to equal column
+  widths no matter what is in them.*/
 div.view-gallery table.views-view-grid {
   table-layout:fixed;
 }
 
 .inline-first {
   display:inline;
+  }
+
+.view-scholar-image-gallery {
+  font-size: .8em;
+  line-height: 1.3em;
+  overflow: auto;
   }
