top minimenu should be visible if admin

--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -193,6 +193,10 @@ body.cp-toolbar-mini #top {
   z-index: 10;
   }
 
+body.admin-menu #top {
+  top:21px;
+  }
+
 body.cp-toolbar-mini #top ul.links {
   background: url(images/toolbar-mini-tab.png) no-repeat 0 0;
   height: 22px;
