fixed extra checkmark in safari, chrome

--- a/sites/all/themes/cp_theme/spaces.css
+++ b/sites/all/themes/cp_theme/spaces.css
@@ -19,7 +19,7 @@ table.spaces-features {
 
 table.spaces-settings div.description { white-space:normal; }
 
-table.spaces-features tr.enabled {
+table.spaces-features tr.enabled td.name {
   background: url(images/check-mark.png) no-repeat 140px 50%;
   }
 
