initial theming vocab in site info

--- a/sites/all/themes/cp_theme/forms.css
+++ b/sites/all/themes/cp_theme/forms.css
@@ -28,9 +28,22 @@ fieldset {
     }
   }
 
-.section-cp .fieldset-wrapper .fieldset-wrapper {
+.section-cp .fieldset-wrapper .fieldset-wrapper,
+.section-cp .og-vocab-taxonomy .fieldset-wrapper {
 	margin: 0;
 	}
+
+.section-cp .collapsible, .section-cp .og-vocab-taxonomy {
+  margin: 10px -3px;
+  padding: 10px 3px 10px 10px;
+  border: 1px solid #dfe5e6;
+  background: #f2f5f5;
+  width: 93%;
+  }
+
+.section-cp .collapsible legend, .section-cp .og-vocab-taxonomy legend {
+  font-size: 1em;
+  }
 
 .section-cp div.form-item {
 	margin: 0 1em 0 0;
