ctools dropdown scrolling weirdness

--- a/sites/all/themes/cp_theme/forms.css
+++ b/sites/all/themes/cp_theme/forms.css
@@ -33,7 +33,7 @@ fieldset {
 	margin: 0;
 	}
 
-.section-cp .collapsible, .section-cp .og-vocab-taxonomy {
+.section-cp .og-vocab-taxonomy {
   margin: 10px -3px;
   padding: 10px 3px 10px 10px;
   border: 1px solid #dfe5e6;
@@ -41,7 +41,7 @@ fieldset {
   width: 93%;
   }
 
-.section-cp .collapsible legend, .section-cp .og-vocab-taxonomy legend {
+.section-cp .og-vocab-taxonomy legend {
   font-size: 1em;
   }
 
