ctools dropdown scrolling weirdness

--- a/sites/all/themes/scholar_base/modal.css
+++ b/sites/all/themes/scholar_base/modal.css
@@ -14,12 +14,14 @@ div.ctools-modal-content {
   border: none;
   text-align: left;
   background: #fff;
+  overflow:auto;
   }
 
 #modal-content {
   border: none;
   background: #fff;
   padding-bottom: 0;
+  margin-bottom: -6px;
   }
 
 
@@ -41,10 +43,8 @@ div.ctools-modal-content .modal-header a {
 }
 
 div.ctools-modal-content .modal-content {
-  padding: 1em 1em 0 1em;
-  overflow: auto;
+  padding: 0;
   width: 575px;
-  height: 400px;
 }
 
 div.ctools-modal-content .modal-form {
