--- a/sites/all/themes/scholar_projects_front/scholar-projects-front.css
+++ b/sites/all/themes/scholar_projects_front/scholar-projects-front.css
@@ -138,6 +138,11 @@ li#get-form a {
   }
 
 .front #content-wrapper {
+  padding:0 !important;
+  }
+
+
+.front #content-wrapper {
   background: transparent;
   }
 #content-row-1 {
