--- a/sites/all/themes/scholar_projects_front/scholar-projects-front.css
+++ b/sites/all/themes/scholar_projects_front/scholar-projects-front.css
@@ -168,7 +168,7 @@ li#get-form a {
   background: url(images/triangle-video-tutorial.png) no-repeat transparent;
   background: url(images/version-2.png) no-repeat transparent;
   position: absolute;
-  top: 1px;
+  top: 0;
   right: 0;
   text-indent: -999em;
   }
