added borders to feature blocks

--- a/sites/all/themes/scholar_projects_front/scholar-projects-front.css
+++ b/sites/all/themes/scholar_projects_front/scholar-projects-front.css
@@ -193,11 +193,12 @@ li#get-form a {
 
 #content-row-2 .featureblock {
   float: left;
-  width:196px;
+  width:195px;
   height: 295px;
   margin:1px 0 0 1px;
   background-color: #fff;
   padding: 26px 24px;
+  border-right: 1px solid #ccc;
   }
 
 #content-row-2 .featureblock h3, #content-row-2 .featureblock p {
@@ -219,7 +220,8 @@ li#get-form a {
   }
 
 #feature-collaborate {
-  background:url(images/front-row2-collaborate.jpg)
+  background:url(images/front-row2-collaborate.jpg);
+  border: none;
   }
 
 
