front page changes

--- a/sites/all/themes/qualitative_methods/qualitative-methods.css
+++ b/sites/all/themes/qualitative_methods/qualitative-methods.css
@@ -63,8 +63,8 @@ h1 {
   padding-right: 346px;
   }
 
-#content-main {
-  padding: 0 30px;
+#content-main, body.no-sidebars #content-main {
+  padding: 30px;
   width: auto;
   }
 
