--- a/sites/all/themes/scholar_projects_front/scholar-projects-front.css
+++ b/sites/all/themes/scholar_projects_front/scholar-projects-front.css
@@ -219,11 +219,14 @@ li#get-form a {
   background:url(images/front-row2-lookfeel.jpg)
   }
 
-#feature-collaborate {
+#feature-collaborate, #feature-events {
   background:url(images/front-row2-collaborate.jpg);
   border: none;
   }
 
+#feature-events {
+  background:url(images/front-row2-events.png);
+  }
 
 #block-views-iqss_project_sites-block_1 {
   background: url(images/front-row3-bg.png) repeat-x #fefefe;
