hover link color primary menu

--- a/sites/all/themes/qualitative_methods/qualitative-methods.css
+++ b/sites/all/themes/qualitative_methods/qualitative-methods.css
@@ -59,6 +59,10 @@ body {
   font-weight: bold;
   }
 
+#header-main .block-vsite_menus li a:hover {
+  color: #fff;
+  }
+
 /* LAYOUT */
 
 #wrapper {
